project(ExampleAnalysis)

include_directories( ${CMAKE_SOURCE_DIR} )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

add_library(sbnanalysis_ExampleAnalysis_ExampleTools SHARED ExampleTools.cxx)
add_library(sbnanalysis_ExampleAnalysis_ExampleSelection SHARED ExampleSelection.cxx)

target_link_libraries(sbnanalysis_ExampleAnalysis_ExampleSelection sbnanalysis_ExampleAnalysis_ExampleTools)

install(TARGETS sbnanalysis_ExampleAnalysis_ExampleTools DESTINATION lib)
install(TARGETS sbnanalysis_ExampleAnalysis_ExampleSelection DESTINATION lib)

